# Docker

./: pyproject.toml
djdocker/: Dockerfile  asgi.py  docker-compose.yml  requirements.txt  settings.py  urls.py  wsgi.py
